--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,16 @@
         "structs.h": "c",
         "dependencies.h": "c",
         "init.h": "c",
-        "cub3d.h": "c"
+        "cub3d.h": "c",
+        "__hash_table": "c",
+        "__split_buffer": "c",
+        "array": "c",
+        "bitset": "c",
+        "initializer_list": "c",
+        "string": "c",
+        "string_view": "c",
+        "unordered_map": "c",
+        "utility": "c",
+        "vector": "c"
     }
 }
