--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "unordered_map": "c",
         "utility": "c",
         "vector": "c",
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "parsing.h": "c"
     }
 }
