--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "vector": "c",
         "stdbool.h": "c",
         "parsing.h": "c",
-        "lib.h": "c"
+        "lib.h": "c",
+        "iterator": "c"
     }
 }
